--- a/config/polybar/gloom-onedark.ini
+++ b/config/polybar/gloom-onedark.ini
@@ -290,7 +290,7 @@ card = intel_backlight
 
 [module/wlan]
 type = internal/network
-interface = wlo1
+interface = wlp2s0
 interval = 3.0
 format-connected =  <label-connected>
 label-connected = "  " 
